--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -5,7 +5,8 @@
             <strong>NodeJS</strong>!</p>
         <br>
         <p>
-            <a class="icon is-medium" href="https://discord.gg/VeHauH5"><i class="fa icon-discord" style="padding-top: 4px;"></i></a>
+            <a class="icon is-medium" href="https://discord.gg/ssl"><i class="fa icon-discord"
+                                                                       style="padding-top: 4px;"></i></a>
             <a class="icon is-medium" href="https://www.github.com/XeliteXirish"><i class="fa fa-github"></i></a>
             <a class="icon is-medium" href="https://status.shaunoneill.com"><i class="fa fa-check"></i></a>
         </p>
