--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -113,20 +113,25 @@
 
                 <article class="message is-info">
                     <div class="message-header">
-                        <p>Management Department</p>
+                        <p>&bull;&nbsp;Management Department</p>
                     </div>
                     <div class="message-body">
-                        Stuff about management here
+                        The management team are the ones who decide which changes SSL should go through. It's their job
+                        to discuss changes and propose a vote on the subject, if the vote rules in
+                        favour of the change, it is managements responsibility to make sure that the change happens.
                     </div>
                 </article>
             </div>
             <div class="column is-half">
                 <article class="message is-info">
                     <div class="message-header">
-                        <p>Management Department</p>
+                        <p>&bull;&nbsp;Management Department</p>
                     </div>
                     <div class="message-body">
-                        Stuff about management here
+                        The moderation team are the front line of defence for the server. It's their responsibility to
+                        be watching chat to punish users who break our guidelines. They also have the
+                        responsibility of ensuring that all nick changes get processed quickly! Higher moderation will
+                        work closely with management so changes that will effect the moderation team can be discussed.
                     </div>
                 </article>
             </div>
