--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -125,7 +125,7 @@
             <div class="column is-half">
                 <article class="message is-info">
                     <div class="message-header">
-                        <p>&bull;&nbsp;Management Department</p>
+                        <p>&bull;&nbsp;Moderation Department</p>
                     </div>
                     <div class="message-body">
                         The moderation team are the front line of defence for the server. It's their responsibility to
