Have my username

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -319,7 +319,7 @@
     </div>
     <div class="hero-foot">
         <div class="container has-text-centered">
-            <p>~ If the repo is private, just send me a message on discord :D Thanks ~</p>
+            <p>~ If the repo is private, just send me a message on discord @XeliteXirish#4468 :D Thanks ~</p>
         </div>
     </div>
 </section>
