--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -60,7 +60,7 @@
                 <strong>SSL - Staff Applications</strong>
             </h1>
             <h2 class="subtitle is-4">
-                <span>Submit you're request to join our awesome team over at SSL!</span>
+                <span>Submit your request to join our awesome team over at SSL!</span>
             </h2>
         </div>
     </div>
@@ -283,7 +283,7 @@
             <div class="control">
                 <button class="button" onclick="resetFields()">Reset</button>
                 <button class="button is-primary" onclick="submitApplication()">
-                    Submit Number
+                    Submit Application
                 </button>
             </div>
         </div>
