--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -217,7 +217,7 @@
                     <div class="field-body">
                         <div class="field">
                             <div class="control">
-                                <input id="submitTimezone" class="input" placeholder="GMT +1">
+                                <input id="submitTimezone" class="input">
                             </div>
                             <p id="invalidNumberMsg" class="help">&bull;&nbsp;Please enter your current timezone. Eg:
                                 GMT + 1</p>
