Fix the box sizes

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -119,6 +119,9 @@
                         The management team are the ones who decide which changes SSL should go through. It's their job
                         to discuss changes and propose a vote on the subject, if the vote rules in
                         favour of the change, it is managements responsibility to make sure that the change happens.
+                        It is senior managements responsibility to ensure that the moderation team have the resources
+                        they need
+                        to do their job.
                     </div>
                 </article>
             </div>
