Fix the box sizes

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -331,7 +331,7 @@
 
 <script src="/js/submit.js"></script>
 <script>
-    $("#manInfo").height($("#modInfo").height());
+    $("#modInfo").height($("#manInfo").height());
 </script>
 <%- include partials/footer.ejs %>
 
