Fix the box sizes

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -111,9 +111,9 @@
         <hr>
 
         <div class="columns">
-            <div class="column is-half">
+            <div id="manInfo" class="column is-half">
 
-                <article id="manInfo" class="message is-info">
+                <article class="message is-info">
                     <div class="message-header">
                         <p>&bull;&nbsp;Management Department</p>
                     </div>
@@ -127,8 +127,8 @@
                     </div>
                 </article>
             </div>
-            <div class="column is-half">
-                <article id="modInfo" class="message is-info">
+            <div id="modInfo" class="column is-half">
+                <article class="message is-info">
                     <div class="message-header">
                         <p>&bull;&nbsp;Moderation Department</p>
                     </div>
