Fix the box sizes

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -111,13 +111,13 @@
         <hr>
 
         <div class="columns">
-            <div id="manInfo" class="column is-half">
+            <div class="column is-half">
 
                 <article class="message is-info">
                     <div class="message-header">
                         <p>&bull;&nbsp;Management Department</p>
                     </div>
-                    <div class="message-body">
+                    <div id="manInfo" class="message-body">
                         The management team are the ones who decide which changes SSL should go through. It's their job
                         to discuss changes and propose a vote on the subject, if the vote rules in
                         favour of the change, it is managements responsibility to make sure that the change happens.
@@ -127,12 +127,12 @@
                     </div>
                 </article>
             </div>
-            <div id="modInfo" class="column is-half">
+            <div class="column is-half">
                 <article class="message is-info">
                     <div class="message-header">
                         <p>&bull;&nbsp;Moderation Department</p>
                     </div>
-                    <div class="message-body">
+                    <div id="modInfo" class="message-body">
                         The moderation team are the front line of defence for the server. It's their responsibility to
                         be watching chat to punish users who break our guidelines. They also have the
                         responsibility of ensuring that all nick changes get processed quickly! Higher moderation will
