Just some to fixs before public

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,8 +1,10 @@
 <footer class="footer">
     <div class="has-text-centered">
         <p><strong>SSL - Staff Applications</strong> created by <a
-                    href="https://www.shaunoneill.com"><strong>XeliteXirish!</strong></a> Running smoothly using
-            <strong>NodeJS</strong>!</p>
+                    href="https://www.shaunoneill.com"><strong>XeliteXirish!</strong></a> Running smoothly using<strong>NodeJS</strong>!
+            <br>
+            <small>Originally created for <a href="https://discord.gg/ssl">SSL Community</a>! Come check us out!</small>
+        </p>
         <br>
         <p>
             <a class="icon is-medium" href="https://discord.gg/ssl"><i class="fa icon-discord"
