--- a/src/views/unauthorised.ejs
+++ b/src/views/unauthorised.ejs
@@ -58,10 +58,10 @@
     <div class="hero-body">
         <div class="container has-text-centered">
             <h1 class="title is-1">
-                <strong>SSL - Staff Applications</strong>
+                <strong><%- serverName %> - Staff Applications</strong>
             </h1>
             <h2 class="subtitle is-4">
-                <span>Submit your request to join our awesome team over at SSL!</span>
+                <span>Submit your request to join our awesome team over at <%- serverName %>!</span>
             </h2>
         </div>
     </div>
