--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -16,8 +16,8 @@
     <meta name="author" content="XeliteXirish">
     <meta name="description" content="Open-Source dev team">
 
-    <meta name="apple-mobile-web-app-title" content="SSLStaffSubmissions">
-    <meta name="application-name" content="SSLStaffSubmissions">
+    <meta name="apple-mobile-web-app-title" content="StaffSubmissions">
+    <meta name="application-name" content="StaffSubmissions">
     <meta name="theme-color" content="#00c0fc">
 </head>
 
