--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -16,8 +16,8 @@
     <meta name="author" content="XeliteXirish">
     <meta name="description" content="Open-Source dev team">
 
-    <meta name="apple-mobile-web-app-title" content="SSLStaffSubmissions">
-    <meta name="application-name" content="SSLStaffSubmissions">
+    <meta name="apple-mobile-web-app-title" content="StaffSubmissions">
+    <meta name="application-name" content="StaffSubmissions">
     <meta name="theme-color" content="#00c0fc">
 
     <script src="js/jquery-2.2.0.min.js"></script>
@@ -59,10 +59,10 @@
     <div class="hero-body">
         <div class="container has-text-centered">
             <h1 class="title is-1">
-                <strong>SSL - Staff Applications</strong>
+                <strong><%- serverName %> - Staff Applications</strong>
             </h1>
             <h2 class="subtitle is-4">
-                <span>Submit your request to join our awesome team over at SSL!</span>
+                <span>Submit your request to join our awesome team over at <%- serverName %>!</span>
             </h2>
         </div>
     </div>
@@ -104,8 +104,8 @@
 <section class="section">
     <div class="container">
         <div class="heading">
-            <h1 class="title is-3">&bull;&nbsp;Applying for staff in <a href="https://www.discord.gg/ssl">Scammer Sub
-                    Lounge</a>?</h1>
+            <h1 class="title is-3">&bull;&nbsp;Applying for staff in <a href="<%- serverInvite %>"><%- serverName %></a>?
+            </h1>
             <h2 class="subtitle is-4"><i>Read below for more information!</i></h2>
         </div>
         <hr>
